--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -29,7 +29,7 @@ body header .carousel-inner .carousel-item {
 body header .carousel-inner .carousel-item .carousel-gradient {
   width: 100%;
   height: inherit;
-  background: linear-gradient(45deg, rgba(89, 89, 89, 0.4), rgba(89, 89, 89, 0.4));
+  background-color: rgba(33, 33, 33, 0.8);
 }
 body header .header-top {
   display: -webkit-box;
@@ -44,7 +44,7 @@ body header .header-top {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 80%;
+  width: 70%;
   height: 80px;
   margin: 0 auto;
 }
@@ -58,7 +58,7 @@ body header .header-top .header-logo {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 20%;
+  width: 25%;
   height: inherit;
   z-index: 1;
 }
@@ -80,7 +80,7 @@ body header .header-top .header-menu {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 70%;
+  width: 65%;
   height: inherit;
   z-index: 1;
 }
@@ -99,5 +99,76 @@ body header .header-top .header-menu ul {
 body header .header-top .header-menu ul .menu-item {
   color: #fff;
   font-size: 14px;
-  margin: 0 15px;
+  cursor: pointer;
+  padding: 20px 10px;
+}
+body header .header-top .header-menu ul .menu-item:hover {
+  color: #C7B299;
+}
+body header .header-top .header-menu ul .menu-item--active {
+  color: #C7B299;
+  padding: 20px 10px;
+}
+body header .header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 70%;
+  height: 300px;
+  margin: 100px auto;
+  padding: 100px 0;
+}
+body header .header-container .container-title {
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+}
+body header .header-container .container-title h2 {
+  font-size: 35px;
+  color: #fff;
+}
+body header .header-container .container-title h1 {
+  font-size: 54px;
+  color: #fff;
+  font-weight: bold;
+}
+body header .header-container .container-title p {
+  font-size: 16px;
+  color: #fff;
+}
+body header .header-container .container-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 70px;
+  z-index: 1;
+  margin-top: 50px;
+}
+body header .header-container .container-btn #btn-started {
+  width: 170px;
+  height: 55px;
+  font-size: 14px;
+  background-color: #998675;
+  border: none;
+  border-bottom: 2px solid #736357;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
 }
