--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -125,8 +125,7 @@ body header .header-container {
           flex-direction: column;
   width: 70%;
   height: 300px;
-  margin: 100px auto;
-  padding: 100px 0;
+  margin: 200px auto;
 }
 body header .header-container .container-title {
   width: 100%;
@@ -161,7 +160,7 @@ body header .header-container .container-btn {
   z-index: 1;
   margin-top: 50px;
 }
-body header .header-container .container-btn #btn-started {
+body header .header-container .container-btn .bigBtn {
   width: 170px;
   height: 55px;
   font-size: 14px;
@@ -171,4 +170,245 @@ body header .header-container .container-btn #btn-started {
   border-radius: 5px;
   color: #fff;
   font-weight: bold;
+  outline: none;
+}
+body main {
+  width: 100%;
+}
+body main .services {
+  margin: 50px 0;
+}
+body main .services .service {
+  margin: 30px 0;
+  text-align: center;
+}
+body main .services .service .title {
+  margin: 30px 0 15px;
+}
+body main .services .service .title h3 {
+  font-size: 22px;
+}
+body main .services .service .text {
+  color: #8C8C8C;
+  font-size: 14px;
+}
+body main .photos {
+  width: 100%;
+  padding: 50px 0 0;
+  background-color: #FBFAF8;
+}
+body main .photos .photo {
+  width: 100%;
+  margin: 0 auto;
+}
+body main .photos .photo .title {
+  width: 65%;
+  margin: 0 auto;
+  text-align: center;
+}
+body main .photos .photo .title h2 {
+  font-size: 30px;
+}
+body main .photos .photo .title p {
+  color: #8C8C8C;
+  font-size: 16px;
+}
+body main .photos .photo .card {
+  width: 95%;
+  background-color: #FBFAF8;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  margin: 100px auto 0;
+}
+body main .photos .photo .card .card-container {
+  width: 60%;
+}
+body main .photos .photo .card .card-container img {
+  width: 100%;
+}
+body main .photos .photo .card .card1 {
+  margin: 0;
+}
+body main .photos .photo .card .card2 {
+  margin-top: -31%;
+  margin-left: 37%;
+  z-index: 1;
+}
+body main .photos .photo .card .card3 {
+  margin: -37.7% 0 0 18%;
+  z-index: 2;
+}
+body main .boxes {
+  width: 100%;
+  background-color: #3D2A22;
+  padding: 30px 0;
+  margin-top: -3px;
+  position: absolute;
+  z-index: 99999;
+}
+body main .boxes .container {
+  height: inherit;
+}
+body main .boxes .container .row {
+  width: 95%;
+  margin: 0 auto;
+}
+body main .boxes .container .row .boxes-desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+body main .boxes .container .row .boxes-desc h2 {
+  color: #fff;
+  font-size: 28px;
+}
+body main .boxes .container .row .boxes-desc h2 span {
+  color: #736357;
+  font-size: 28px;
+}
+body main .boxes .container .row .boxes-desc p {
+  font-size: 18px;
+  color: #736357;
+}
+body main .boxes .container .row .boxes-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+body main .boxes .container .row .boxes-btn .bigBtn {
+  width: 170px;
+  height: 55px;
+  font-size: 14px;
+  background-color: #998675;
+  border: none;
+  border-bottom: 2px solid #736357;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
+  outline: none;
+}
+body main .project {
+  width: 100%;
+  margin: 170px 0 70px;
+}
+body main .project .project-title {
+  text-align: center;
+}
+body main .project .project-title h3 {
+  font-size: 30px;
+  color: #555555;
+}
+body main .project .project-title p {
+  width: 65%;
+  margin: 0 auto;
+  font-size: 16px;
+  color: #8C8C8C;
+}
+body main .project .btn-container {
+  width: 60%;
+  text-align: center;
+  margin: 15px auto 20px;
+}
+body main .project .btn-container .btn-project {
+  height: 32px;
+  padding: 0 15px;
+  margin: 0 5px;
+  font-size: 14px;
+  color: #8C8C8C;
+  background-color: #fff;
+  border: 1px solid silver;
+  border-radius: 3px;
+  outline: none;
+}
+body main .project .btn-container .btn-project:hover {
+  background-color: #736357;
+  color: #fff;
+}
+body main .project .project-gallery {
+  margin: 0 auto;
+}
+body main .project .project-gallery .project-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 20px;
+}
+body main .project .project-gallery .project-container .project-photo {
+  width: 100%;
+  height: 70%;
+  cursor: pointer;
+}
+body main .project .project-gallery .project-container .project-photo img {
+  width: inherit;
+  height: 100%;
+}
+body main .project .project-gallery .project-container .project-description {
+  width: 100%;
+  height: 30%;
+  background-color: #FBFAF8;
+  padding: 30px 20px;
+}
+body main .project .project-gallery .project-container .project-description h3 {
+  font-size: 20px;
+  color: #C7B299;
+}
+body main .project .project-gallery .project-container .project-description p {
+  font-size: 14px;
+  color: #D1D1D1;
+}
+body main .project .project-gallery .project-container .project-description:hover {
+  background-color: #362F2D;
+  cursor: pointer;
+}
+body main .project .project-gallery .project-container .project-description:hover p {
+  color: #B3A08A;
+}
+body main .project .project-gallery .project-container .project-description:hover h3 {
+  color: #fff;
+}
+body main .project .bottom-button {
+  width: 18%;
+  margin: 50px auto;
+}
+body main .project .bottom-button .bigBtn {
+  width: 170px;
+  height: 55px;
+  font-size: 14px;
+  background-color: #998675;
+  border: none;
+  border-bottom: 2px solid #736357;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
+  outline: none;
 }
